Добавлены кнопки изменения сложности

--- a/Sudoku/index.html
+++ b/Sudoku/index.html
@@ -8,4 +8,7 @@
 generate()
 </script>
 </table>
+<input type="submit" name="ezy" value="Легко">
+<input type="submit" name="normal"  value="Нормально">
+<input type="submit" name="hard"  value="Сложно">
 </body>
