--- a/Sudoku/index.html
+++ b/Sudoku/index.html
@@ -8,7 +8,7 @@
 generate()
 </script>
 </table>
-<input type="submit" name="ezy" value="Легко">
-<input type="submit" name="normal"  value="Нормально">
-<input type="submit" name="hard"  value="Сложно">
+<input type="submit" name="ezy" onclick="sessionStorage['complication']=2" value="Легко">
+<input type="submit" name="normal" onclick="sessionStorage['complication']=3" value="Нормально">
+<input type="submit" name="hard" onclick="sessionStorage['complication']=4" value="Сложно">
 </body>
