--- a/Sudoku/index.html
+++ b/Sudoku/index.html
@@ -1,10 +1,12 @@
 <head>
+	<meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="style.css">
 <script type="text/javascript" src="sudoku.js"></script>
 </head>
 <body>
-	<h3>Судоку</h3>
-	<br>
+<h3>Судоку</h3>
+<br>
+<form method="Post">
 <table id="sudoku" cellspacing="0">
 <script>
 generate()
@@ -16,4 +18,5 @@ generate()
 <input type="submit" name="ezy" onclick="sessionStorage['complication']=2" value="Легко">
 <input type="submit" name="normal" onclick="sessionStorage['complication']=3" value="Нормально">
 <input type="submit" name="hard" onclick="sessionStorage['complication']=4" value="Сложно">
+</form>
 </body>
